--- a/public/index copy.html
+++ b/public/index copy.html
@@ -22,12 +22,19 @@
     </div>
 
 
- <!-- Personal script 有使用jQuery -->
- <script src="script.js"></script>
- <!-- jQuery library -->
- <script src="https://cdn.jsdelivr.net/npm/jquery@3.6.3/dist/jquery.slim.min.js"></script>
 
- 
+
+     <!-- jQuery library -->
+    <script src="https://cdn.jsdelivr.net/npm/jquery@3.6.3/dist/jquery.slim.min.js"></script>
+
+    <!-- Popper JS -->
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
+
+    <!-- Latest compiled JavaScript -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"></script>
+    <!-- Personal script 有使用jQuery -->
+    <script src="script.js"></script>
+
     <!--users cannot use react devtools-->
     <!-- <script>
       window.__REACT_DEVTOOLS_GLOBAL_HOOK__.inject = function () {}
